--- a/package.json
+++ b/package.json
@@ -12,13 +12,22 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "near-api-js": "^1.0.0",
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "prestart": "yarn build"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.16",
+    "@types/uuid": "^8.3.4",
+    "concurrently": "^7.4.0",
+    "nodemon": "^2.0.19",
+    "typescript": "^4.8.3"
   }
 }
