feat: make contract call

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,7 @@
 PORT=3000
-MOCK_MERCHANT_ID=
 SECRET=
+API_KEY=
+CLAIM_DOMAIN=https://app.nearcashback.com
+PRIVATE_KEY=
+CONTRACT_ID=
+NETWORK=development
